--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,20 @@
             <version>5.10.0</version> <!-- или последняя доступная версия -->
             <scope>test</scope>
         </dependency>
+
+        <!-- SLF4J API (интерфейс) -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.12</version>
+        </dependency>
+
+        <!-- Logback (реализация для SLF4J) -->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.5.13</version>
+        </dependency>
     </dependencies>
 
 </project>
