--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,13 @@
             <version>5.14.2</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.15.4</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
