--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>mathproj</groupId>
     <artifactId>mathproj-labs</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
 
     <name>mathproj-labs</name>
     <url>http://maven.apache.org</url>
@@ -75,6 +75,16 @@
 
     <build>
         <finalName>${project.artifactId}</finalName>
+
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>**/*</include>
+                </includes>
+            </resource>
+        </resources>
+
         <plugins>
 
             <!-- Компилятор -->
